[gd_scene load_steps=15 format=2]

[ext_resource path="res://Scenes/Gojo.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scenes/Sukuna.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scenes/hollowPurple.tscn" type="PackedScene" id=3]
[ext_resource path="res://Assets/Sprites/destroyedcity.png" type="Texture" id=4]
[ext_resource path="res://Scripts/Main.gd" type="Script" id=8]
[ext_resource path="res://Assets/Sprites/barEmpty.png" type="Texture" id=9]
[ext_resource path="res://Assets/Sprites/fillRed.png" type="Texture" id=10]
[ext_resource path="res://Assets/Sprites/fillBlue.png" type="Texture" id=11]
[ext_resource path="res://Assets/Sprites/fillGreen.png" type="Texture" id=12]
[ext_resource path="res://Assets/Sprites/fillOrange.png" type="Texture" id=13]
[ext_resource path="res://Scripts/RCT.gd" type="Script" id=14]
[ext_resource path="res://Scripts/GoHP.gd" type="Script" id=15]
[ext_resource path="res://Scripts/CT.gd" type="Script" id=16]
[ext_resource path="res://Scripts/SuHp.gd" type="Script" id=17]

[node name="Main" type="Node2D"]
position = Vector2( 1, 0 )
script = ExtResource( 8 )

[node name="background" type="Sprite" parent="."]
scale = Vector2( 2.37833, 1.76221 )
texture = ExtResource( 4 )
centered = false

[node name="RCT" type="TextureProgress" parent="."]
light_mask = 0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 229.0
margin_top = 714.0
margin_right = 858.0
margin_bottom = 864.0
rect_scale = Vector2( 0.36, 0.3 )
value = 50.0
texture_under = ExtResource( 9 )
texture_progress = ExtResource( 10 )
fill_mode = 1
script = ExtResource( 14 )

[node name="GoHP" type="TextureProgress" parent="."]
margin_left = 16.0
margin_top = 660.0
margin_right = 645.0
margin_bottom = 810.0
rect_scale = Vector2( 0.7, 0.3 )
value = 100.0
texture_under = ExtResource( 9 )
texture_progress = ExtResource( 12 )
script = ExtResource( 15 )

[node name="CT" type="TextureProgress" parent="."]
margin_left = 14.0
margin_top = 714.0
margin_right = 643.0
margin_bottom = 864.0
rect_scale = Vector2( 0.36, 0.3 )
value = 50.0
texture_under = ExtResource( 9 )
texture_progress = ExtResource( 11 )
script = ExtResource( 16 )

[node name="SuHp" type="TextureProgress" parent="."]
margin_left = 865.0
margin_top = 705.0
margin_right = 1494.0
margin_bottom = 855.0
rect_scale = Vector2( 0.75, 0.4 )
value = 100.0
texture_under = ExtResource( 9 )
texture_progress = ExtResource( 13 )
script = ExtResource( 17 )

[node name="Sukuna" parent="." instance=ExtResource( 2 )]
position = Vector2( 168, 191 )
scale = Vector2( 0.75, 0.75 )
mass = 60.0

[node name="Gojo" parent="." instance=ExtResource( 1 )]
position = Vector2( 1220, 489 )
scale = Vector2( 0.75, 0.75 )

[node name="hollowPurple" parent="." instance=ExtResource( 3 )]
position = Vector2( -378, 406 )
scale = Vector2( 0.65, 0.65 )

[connection signal="availableRCT" from="RCT" to="Gojo" method="_on_RCT_availableRCT"]
[connection signal="emptyRCT" from="RCT" to="Gojo" method="_on_RCT_emptyRCT"]
[connection signal="passValue" from="RCT" to="CT" method="_on_RCT_passValue"]
[connection signal="go_jo" from="GoHP" to="." method="_on_GoHP_go_jo"]
[connection signal="go_jo" from="GoHP" to="Sukuna" method="_on_GoHP_go_jo"]
[connection signal="availableCT" from="CT" to="Gojo" method="_on_CT_availableCT"]
[connection signal="emptyCT" from="CT" to="Gojo" method="_on_CT_emptyCT"]
[connection signal="passValue" from="CT" to="RCT" method="_on_CT_passValue"]
[connection signal="frauduna" from="SuHp" to="." method="_on_SuHp_frauduna"]
[connection signal="dmgGojo" from="Sukuna" to="GoHP" method="_on_Sukuna_dmgGojo"]
[connection signal="MurasakiATK" from="Gojo" to="." method="_on_Gojo_MurasakiATK"]
[connection signal="blueShot" from="Gojo" to="CT" method="_on_Gojo_blueShot"]
[connection signal="dmgSukuna" from="Gojo" to="SuHp" method="_on_Gojo_dmgSukuna"]
[connection signal="redShot" from="Gojo" to="RCT" method="_on_Gojo_redShot"]
[connection signal="dmgTrigger" from="hollowPurple" to="Gojo" method="_on_hollowPurple_dmgTrigger"]
